<resources>
    <string name="app_name">ChatApp</string>
    <!--Login Screen Main Activity Strings -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signUpText">Create your account</string>

    <!--SignUp Screen SignUp Activity Strings-->
    <string name="signUp">Sign Up</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name='confirmPassword'>Confirm password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="cancel">Cancel</string>

    <string name="search">Search</string>
    <string name="typeMessage">Type your message</string>
    <string name="signOut">Sign out</string>
    <string name="fingerprint">Fingerprint Settings</string>
    <string name="fingerprintTitle">Fingerprint Authentication</string>
    <string name="instructions">Place your fingerprint on the Home button to verify your identity</string>
    <string name="searchContactActivity">Search Contacts</string>
    <string name="dashboardActivity">ChatApp</string>
    <string name="fingerprintActivity">Fingerprint</string>
    <string name="fingerprintDefaultStatus">You have not assigned fingerprint to ChatApp. Please touch your fingerprint sensor for assign fingerprint to ChatApp.</string>
    <string name="fingerprintUnlock">Fingerprint</string>
    <string name="fingerprintDetails">Confirm fingerprint to continue.</string>
    <string name="touchSensor">Touch Sensor</string>
    <string name="close">Close</string>

    <string name="message">Message</string>
</resources>
