<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:weightSum="3"
            android:background="@drawable/header_design"
            >
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal|center_vertical"
                android:paddingTop="40dp"
                android:paddingBottom="0dp"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/logo"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical">
                <TextView android:layout_width="wrap_content"
                    android:layout_height="26dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingBottom="50dp"
            android:paddingTop="50dp">
            <!--First Name-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/signUpFirstNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_box_design"
                    android:hint="@string/firstName"
                    android:textColor="@color/colorPrimaryText" />
            </TableRow>

            <!--LastName-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/signUpLastNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_box_design"
                    android:hint="@string/lastName"
                    android:textColor="@color/colorPrimaryText" />
            </TableRow>

            <!--Phone number-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/signUpPhoneNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_box_design"
                    android:hint="@string/phoneNumber"
                    android:textColor="@color/colorPrimaryText" />
            </TableRow>

            <!--Email-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/signUpEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_box_design"
                    android:hint="@string/email"
                    android:textColor="@color/colorPrimaryText" />
            </TableRow>

            <!--Password-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/signUpPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_box_design"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText" />
            </TableRow>

            <!--Confirm Password-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="1">

                <EditText
                    android:id="@+id/signUpConfirmPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_box_design"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/colorPrimaryText" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/signUpCancelButton"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_secondry_design"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/cancel"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_design"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/login"
                    android:textColor="@color/colorTextIcons"
                    android:textSize="16dp"
                    android:textStyle="normal"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>